--- a/CSS/inicio.css
+++ b/CSS/inicio.css
@@ -20,6 +20,7 @@ h2{
     text-align: center;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
+    background-color: #fff;
 }
 
 .card:hover {
