--- a/CSS/Vehiculos.css
+++ b/CSS/Vehiculos.css
@@ -53,5 +53,10 @@ h2 {
     border: black;
   }
   
-  
+  table img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
   
